--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logo.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Ronal Ayra - Desarrollador Full Stack especializado en React, Node.js y tecnologías modernas. Portfolio profesional con proyectos destacados." />
     <meta name="keywords" content="desarrollador, full stack, react, nodejs, portfolio, programador" />
